# bacon-number

./: .gitignore  README.md  docker-compose.yaml
_abandoned/dgraph/: Dockerfile  docker-compose.yaml  init.sh  schema.graphql  transform_dataset.py
httpapi/: .env  Dockerfile  benchmark.py  debug.py  pyproject.toml
httpapi/service/: api.py  app.py  config.py
httpapi/service/backend/: __init__.py  db.py  graph.py
httpapi/tests/: test_api.py  test_app.py  test_db.py  test_functionality.py  utils.py
init/: Dockerfile  dataset_to_db.py
